--- a/SISGEB/src/app/app.component.html
+++ b/SISGEB/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-navbar></app-navbar>
-<app-list-users></app-list-users>
-
 <!--
-  Login pendiente
+  Login pendiente, Gestión de usuarios de administrador en contrucción y pruebas, 
+  debe moverse a su respectivo componente cuando este terminado
 -->
+<!--Modulo Navbar-->
+<app-navbar></app-navbar>
+<!--Modulo Lista de Usuarios (CRUD)-->
+<app-list-users></app-list-users>
