Frontend Terminado / Validaciones a medias

--- a/SISGEB/src/app/app.component.html
+++ b/SISGEB/src/app/app.component.html
@@ -5,4 +5,4 @@
 <!--Modulo Navbar-->
 <app-navbar></app-navbar>
 <!--Modulo Lista de Usuarios (CRUD)-->
-<app-list-users></app-list-users>
+<router-outlet></router-outlet>
