--- a/SISGEB/src/app/components/add-edit-user/add-edit-user.component.html
+++ b/SISGEB/src/app/components/add-edit-user/add-edit-user.component.html
@@ -1,1 +1,68 @@
-<p>add-edit-user works!</p>
+<div class="row mt-3">
+  <div class="col-lg-6 offset-lg-4">
+    <div class="card text-white bg-info mb-3" style="max-width: 40rem">
+      <div class="card-header text-center"><h3>Agregar Usuario</h3></div>
+      <div class="card-body">
+        <form [formGroup]="form" class="form-group" (ngSubmit)="addUser()">
+            <div class="row">
+                <div class="col-lg-6">
+                    <label for="name" class="col-form-label col-form-label-lg">Nombre</label>
+                    <input formControlName="name" type="text" class="form-control form-control-lg" name="name">
+                    <span *ngIf="form.get('name')?.hasError('required') && form.get('name')?.touched" class="text-sm text-danger">
+                        <strong>Campo Requerido</strong>
+                    </span>
+                </div>
+                <div class="col-lg-6">
+                    <label for="apellido" class="col-form-label col-form-label-lg">Apellido</label>
+                    <input formControlName="surname" type="text" class="form-control form-control-lg" name="apellido">
+                    <span *ngIf="form.get('surname')?.hasError('required') && form.get('surname')?.touched" class="text-sm text-danger">
+                        <strong>Campo Requerido</strong>
+                    </span>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-lg-6">
+                    <label for="phone" class="col-form-label col-form-label-lg">Telefono</label>
+                    <input formControlName="phone" type="text" class="form-control form-control-lg" name="phone">
+                    <span *ngIf="form.get('phone')?.hasError('required') && form.get('phone')?.touched" class="text-sm text-danger">
+                        <strong>Campo Requerido</strong>
+                    </span>
+                </div>
+                <div class="col-lg-6">
+                    <label for="address" class="col-form-label col-form-label-lg">Dirección</label>
+                    <input formControlName="address" type="text" class="form-control form-control-lg" name="address">
+                    <span *ngIf="form.get('address')?.hasError('required') && form.get('address')?.touched" class="text-sm text-danger">
+                        <strong>Campo Requerido</strong>
+                    </span>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-lg-6">
+                    <label for="email" class="col-form-label col-form-label-lg">Correo</label>
+                    <input formControlName="email" type="email" class="form-control form-control-lg" name="email">
+                    <span *ngIf="form.get('email')?.hasError('required') && form.get('email')?.touched" class="text-sm text-danger">
+                        <strong>Campo Requerido</strong>
+                    </span>
+                </div>
+                <div class="col-lg-6">
+                    <label for="password" class="col-form-label col-form-label-lg">Contraseña</label>
+                    <input formControlName="password" type="password" class="form-control form-control-lg" name="password">
+                    <span *ngIf="form.get('password')?.hasError('required') && form.get('password')?.touched" class="text-sm text-danger">
+                        <strong>Campo Requerido</strong>
+                    </span>
+                </div>
+            </div>
+            
+            <div class="row mt-4 text-center">
+                <div class="col-lg-6">
+                    <button routerLink="/" type="button" class="btn btn-danger btn-lg">Volver</button>
+                </div>
+                <div class="col-lg-6">
+                    <button [disabled]="form.invalid" type="submit" class="btn btn-primary btn-lg">Aceptar</button>
+                </div>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
