--- a/SISGEB/src/app/components/list-users/list-users.component.html
+++ b/SISGEB/src/app/components/list-users/list-users.component.html
@@ -1,27 +1,33 @@
 <div class="container">
+  <div class="title">
     <h4>Listado de Usuarios</h4>
-    <table class="table table-hover">
-        <thead>
-          <tr class="table-danger">
-            <th scope="col">#</th>
-            <td scope="col">Nombre</td>
-            <td scope="col">Apellido</td>
-            <td scope="col">Telefono</td>
-            <td scope="col">Dirección</td>
-            <td scope="col">Correo</td>
-            <td scope="col"></td>
-          </tr>
-        </thead>
-        <tbody>
-            <tr class="table-active">
-                <th scope="row">1</th>
-                <td>Axel</td>
-                <td>Hernández</td>
-                <td>7775975695</td>
-                <td>C. Adolfo Fierro</td>
-                <td>20213tn018@utez.edu.mx</td>
-                <td>[Botones]</td>
-              </tr>
-        </tbody>
-    </table>
+    <button type="button" class="btn btn-primary" routerLink="/addUser">Agregar Usuario</button>
+  </div>
+  <table class="table table-hover">
+    <thead>
+      <tr class="table-danger">
+        <th scope="col">#</th>
+        <td scope="col">Nombre</td>
+        <td scope="col">Apellido</td>
+        <td scope="col">Telefono</td>
+        <td scope="col">Dirección</td>
+        <td scope="col">Correo</td>
+        <td scope="col"></td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of listUsers" class="table-active">
+        <th>{{ item.id }}</th>
+        <td>{{ item.name }}</td>
+        <td>{{ item.surname }}</td>
+        <td>{{ item.phone }}</td>
+        <td>{{ item.address }}</td>
+        <td>{{ item.email }}</td>
+        <td>
+          <button type="button" class="btn btn-info btn-sm" routerLink="/editUser/{{ item.id }}">Editar</button>
+          <button type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
