--- a/SISGEB/src/app/components/add-edit-user/add-edit-user.component.html
+++ b/SISGEB/src/app/components/add-edit-user/add-edit-user.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-3">
+<div class="mt-3">
   <div class="col-lg-6 offset-lg-4">
     <div class="card text-white bg-info mb-3" style="max-width: 40rem">
       <div class="card-header text-center"><h3>Agregar Usuario</h3></div>
@@ -55,7 +55,7 @@
             
             <div class="row mt-4 text-center">
                 <div class="col-lg-6">
-                    <button routerLink="/" type="button" class="btn btn-danger btn-lg">Volver</button>
+                    <button routerLink="/getUsers" type="button" class="btn btn-danger btn-lg">Volver</button>
                 </div>
                 <div class="col-lg-6">
                     <button [disabled]="form.invalid" type="submit" class="btn btn-primary btn-lg">Aceptar</button>
