--- a/SISGEB/src/app/components/navbar/navbar.component.html
+++ b/SISGEB/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gestión de Usuarios</a>
+            <a class="nav-link" routerLink="/getUsers">Gestión de Usuarios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Gestión de Libros</a>
