--- a/SISGEB/src/app/components/page-not-found-component/page-not-found-component.component.html
+++ b/SISGEB/src/app/components/page-not-found-component/page-not-found-component.component.html
@@ -1,1 +1,4 @@
-<p>page-not-found-component works!</p>
+<div class="text-center mt-5">
+    <h1>Error 404</h1>
+    <p>La pagina que estás buscando no existe</p>
+</div>
