--- a/SISGEB/src/app/components/list-users/list-users.component.html
+++ b/SISGEB/src/app/components/list-users/list-users.component.html
@@ -1,12 +1,13 @@
+<app-progress-bar *ngIf="loading == true"></app-progress-bar>
 <div class="container">
   <div class="title">
     <h4>Listado de Usuarios</h4>
     <button type="button" class="btn btn-primary" routerLink="/addUser">Agregar Usuario</button>
   </div>
-  <table class="table table-hover">
+  <table *ngIf="listUsers.length > 0" class="table table-hover">
     <thead>
       <tr class="table-danger">
-        <th scope="col">#</th>
+        <th scope="col">ID</th>
         <td scope="col">Nombre</td>
         <td scope="col">Apellido</td>
         <td scope="col">Telefono</td>
@@ -25,9 +26,10 @@
         <td>{{ usuario.email }}</td>
         <td>
           <button type="button" class="btn btn-info btn-sm" routerLink="/editUser/{{ usuario.id }}">Editar</button>
-          <button type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
+          <button (click)="deleteUser(usuario.id!)" type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
         </td>
       </tr>
     </tbody>
   </table>
+  <h5 *ngIf="listUsers.length == 0">No hay usuarios registrados</h5>
 </div>
