CRUD Usuarios Terminado - CRUD Libros a medias

--- a/SISGEB/src/app/app.component.html
+++ b/SISGEB/src/app/app.component.html
@@ -1,8 +1,4 @@
-<!--
-  Login pendiente, Gestión de usuarios de administrador en contrucción y pruebas, 
-  debe moverse a su respectivo componente cuando este terminado
--->
 <!--Modulo Navbar-->
 <app-navbar></app-navbar>
-<!--Modulo Lista de Usuarios (CRUD)-->
+<!-- Cuerpo dinamico de la pagina -->
 <router-outlet></router-outlet>
