--- a/SISGEB/src/app/components/navbar/navbar.component.html
+++ b/SISGEB/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">SISGEB</a>
+      <a class="navbar-brand">SISGEB</a>
       <button 
         class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,31 +8,20 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Perfil
-              <span class="visually-hidden">(current)</span>
+            <a class="nav-link" routerLink="/profile">Perfil
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/getUsers">Gestión de Usuarios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gestión de Libros</a>
+            <a class="nav-link" routerLink="/getBooks">Gestión de Libros</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Gestión de Salas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Gestión de Equipos de Computo</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prestamos</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Separated link</a>
-            </div>
           </li>
         </ul>
         <form class="d-flex">
