--- a/SISGEB/src/app/components/profile-user/profile-user.component.html
+++ b/SISGEB/src/app/components/profile-user/profile-user.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="!loading" class="mt-3">
   <div class="col-lg-6 offset-lg-4">
     <div class="card text-white bg-info mb-3" style="max-width: 40rem">
-      <div class="card-header text-center"><h3>{{ operacion }} Usuario</h3></div>
+      <div class="card-header text-center"><h3>Perfil de Usuario</h3></div>
       <div class="card-body">
         <form [formGroup]="form" class="form-group" (ngSubmit)="addUser()">
             <div class="row">
