Login sin terminar

--- a/SISGEB/src/app/app.component.html
+++ b/SISGEB/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--Modulo Navbar-->
 <app-navbar></app-navbar>
 <!-- Cuerpo dinamico de la pagina -->
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
+<app-login></app-login>
