--- a/SISGEB/src/app/components/list-books/list-books.component.html
+++ b/SISGEB/src/app/components/list-books/list-books.component.html
@@ -1,8 +1,8 @@
 <app-progress-bar *ngIf="loading == true"></app-progress-bar>
 <div class="container">
   <div class="title">
-    <h4>Listado de Usuarios</h4>
-    <button type="button" class="btn btn-primary" routerLink="/addBook">Agregar Usuario</button>
+    <h4>Listado de Libros</h4>
+    <button type="button" class="btn btn-primary" routerLink="/addBook">Agregar Libro</button>
   </div>
   <table *ngIf="listBooks.length > 0" class="table table-hover">
     <thead>
@@ -12,7 +12,6 @@
         <td scope="col">Autor</td>
         <td scope="col">Editorial</td>
         <td scope="col">Año de Publicación</td>
-        <td scope="col">Estado</td>
         <td scope="col"></td>
       </tr>
     </thead>
@@ -23,13 +22,12 @@
         <td>{{ libro.author }}</td>
         <td>{{ libro.editorial }}</td>
         <td>{{ libro.publishAge }}</td>
-        <td>{{ libro.status }}</td>
-        <td>
+        <td class="col-2">
           <button type="button" class="btn btn-info btn-sm" routerLink="/editBook/{{ libro.id }}">Editar</button>
-          <button (click)="deleteUser(libro.id!)" type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
+          <button (click)="deleteBook(libro.id!)" type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
         </td>
       </tr>
     </tbody>
   </table>
-  <h5 *ngIf="listBooks.length == 0">No hay usuarios registrados</h5>
+  <h5 *ngIf="listBooks.length == 0">No hay libros registrados</h5>
 </div>
