--- a/SISGEB/src/app/components/list-users/list-users.component.html
+++ b/SISGEB/src/app/components/list-users/list-users.component.html
@@ -24,7 +24,7 @@
         <td>{{ usuario.phone }}</td>
         <td>{{ usuario.address }}</td>
         <td>{{ usuario.email }}</td>
-        <td>
+        <td class="col-2">
           <button type="button" class="btn btn-info btn-sm" routerLink="/editUser/{{ usuario.id }}">Editar</button>
           <button (click)="deleteUser(usuario.id!)" type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
         </td>
