--- a/SISGEB/src/app/components/navbar/navbar.component.html
+++ b/SISGEB/src/app/components/navbar/navbar.component.html
@@ -8,20 +8,16 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/profile">Perfil
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" routerLink="/getUsers">Gestión de Usuarios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/getBooks">Gestión de Libros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gestión de Salas</a>
+            <a class="nav-link" routerLink="/getStudyRooms">Gestión de Salas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gestión de Equipos de Computo</a>
+            <a class="nav-link" routerLink="/getEquipments">Gestión de Equipos de Computo</a>
           </li>
         </ul>
         <form class="d-flex">
