--- a/SISGEB/src/app/app.component.html
+++ b/SISGEB/src/app/app.component.html
@@ -2,4 +2,4 @@
 <app-navbar></app-navbar>
 <!-- Cuerpo dinamico de la pagina -->
 <!--<router-outlet></router-outlet>-->
-<app-login></app-login>
+<router-outlet></router-outlet>
