--- a/SISGEB/src/app/components/list-equipment/list-equipment.component.html
+++ b/SISGEB/src/app/components/list-equipment/list-equipment.component.html
@@ -17,8 +17,8 @@
         <th>{{equipment.id}}</th>
         <td>{{equipment.name}}</td>
         <td class="col-2">
-          <button [routerLink]="['/editEquipment', equipment.id]" type="button" class="btn btn-info btn-sm" routerLink="">Editar</button>
-          <button  type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
+          <button [routerLink]="['/editEquipment', equipment.id]" type="button" class="btn btn-info btn-sm">Editar</button>
+          <button (click)="deleteEquipment(equipment.id!)" type="button" class="btn btn-danger btn-sm ms-2">Eliminar</button>
         </td>
       </tr>
     </tbody>
