Casi todo listo | Problemas al guardar token

--- a/SISGEB/src/app/app.component.html
+++ b/SISGEB/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!--Modulo Navbar-->
-<app-navbar></app-navbar>
+<!--Modulo Navbar
+<app-navbar></app-navbar>-->
 <!-- Cuerpo dinamico de la pagina -->
-<!--<router-outlet></router-outlet>-->
 <router-outlet></router-outlet>
