--- a/SISGEB/src/app/components/add-edit-user/add-edit-user.component.html
+++ b/SISGEB/src/app/components/add-edit-user/add-edit-user.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <app-progress-bar *ngIf="loading"></app-progress-bar>
 <div *ngIf="!loading" class="mt-3">
   <div class="col-lg-6 offset-lg-4">
