--- a/SISGEB/src/app/components/list-books/list-books.component.html
+++ b/SISGEB/src/app/components/list-books/list-books.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <app-progress-bar *ngIf="loading == true"></app-progress-bar>
 <div class="container">
   <div class="title">
