--- a/SISGEB/src/app/components/login/login.component.html
+++ b/SISGEB/src/app/components/login/login.component.html
@@ -1,29 +1,55 @@
-<section class="vh-100 gradient-custom">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-  
-              <div class="mb-md-5 mt-md-4 pb-5">
-  
-                <h2 class="fw-bold mb-2 text-uppercase">SISGEB</h2>
-                <p class="text-white-50 mb-5">¡Por favor, introduce tu usuario y contraseña!</p>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typeEmailX">Email</label>
+<app-progress-bar *ngIf="loading"></app-progress-bar>
+<section class="h-100 gradient-form" style="background-color: #eee;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-xl-10">
+        <div class="card rounded-3 text-black">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div class="card-body p-md-5 mx-md-4">
+
+                <div class="text-center">
+                  <img src="../../../assets/SISGEB.png"
+                    style="width: 190px;" alt="logo">
                 </div>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typePasswordX">Password</label>
-                </div>
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar Sesión</button>
+                <br>
+
+                <form [formGroup]="form" (ngSubmit)="login()">
+                  <div class="form-outline mb-4">
+                    <input type="email" formControlName="email"
+                      id="form2Example11" class="form-control"
+                      placeholder="miguelmoreno@utez.edu.mx" />
+                    <label class="form-label" for="form2Example11">Correo Electrónico</label>
+                    <span *ngIf="form.get('email')?.hasError('required') && form.get('email')?.touched" class="text-sm text-danger">
+                      <strong>  *Campo Requerido</strong>
+                  </span>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <input type="password" id="form2Example22" class="form-control" formControlName="password"
+                    placeholder="***********" />
+                    <label class="form-label" for="form2Example22">Contraseña</label>
+                    <span *ngIf="form.get('password')?.hasError('required') && form.get('password')?.touched" class="text-sm text-danger">
+                      <strong>  *Campo Requerido</strong>
+                  </span>
+                  </div>
+
+                  <div class="text-center pt-1 mb-5 pb-1">
+                    <button [disabled]="form.invalid" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">
+                      Iniciar Sesión
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
+            <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+              <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
