--- a/SISGEB/src/app/components/navbar/navbar.component.html
+++ b/SISGEB/src/app/components/navbar/navbar.component.html
@@ -27,8 +27,7 @@
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-secondary my-2 my-sm-0" type="button" (click)="logOut()">Cerrar Sesión</button>
         </form>
       </div>
     </div>
